--- a/contact.html
+++ b/contact.html
@@ -30,66 +30,86 @@
     </nav>
 
     <main>
-      <div class="formContainer" id="main">
-        <div class="ourData">
-          <form action="#">
-            <h1>Discover Our World</h1>
-            <div class="socialContainer">
-              <a href=""></a>
-            </div>
-            <button>Submit</button>
-          </form>
-        </div>
-        <div class="contactForm">
-          <form action="#">
-            <h1>Get in Touch</h1>
-            <input
-              id="firstName"
-              type="text"
-              name="fName"
-              placeholder="First Name"
-              required=""
-            />
-            <input
-              id="lastName"
-              type="text"
-              name="lName"
-              placeholder="Last Name"
-              required=""
-            />
-            <input
-              id="email"
-              type="email"
-              name="email"
-              placeholder="Email"
-              required=""
-            />
-            <input id="yourMsg" type="text" />
-            <button>Submit</button>
-          </form>
-        </div>
-        <div class="overlayContainer">
-          <div class="overlay">
-            <div class="overlayLeft">
-              <h1>Stay in the Game</h1>
-              <p>
-                Have questions or need support? Reach out, and let’s keep moving
-                forward together
-              </p>
-              <button id="contactUsButton">Contact Us</button>
-            </div>
-            <div class="overlayRight">
-              <h1>Find Your Path</h1>
-              <p>
-                Locate us on the map or follow us online—your journey with us
-                starts here.
-              </p>
-              <button id="findUsButton">Find Us</button>
+      <div class="flexMainContainer">
+        <div class="formContainer" id="main">
+          <div class="ourData">
+            <form action="#">
+              <h1>Discover Our World</h1>
+              <div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2782.6488742896145!2d24.137801599999996!3d45.7782267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474c678604b4ad13%3A0xe744074070b2b902!2sGSD%20Software%20%26%20Technology!5e0!3m2!1sro!2sro!4v1733765943655!5m2!1sro!2sro"
+                  width="300"
+                  height="200"
+                  style="border:0;"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+              <div class="socialMediaContainer">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+              </div>
+              <button>Submit</button>
+            </form>
+          </div>
+          <div class="contactForm">
+            <form action="#">
+              <h1>Get in Touch</h1>
+              <input
+                id="firstName"
+                type="text"
+                name="fName"
+                placeholder="First Name"
+                required=""
+              />
+              <input
+                id="lastName"
+                type="text"
+                name="lName"
+                placeholder="Last Name"
+                required=""
+              />
+              <input
+                id="email"
+                type="email"
+                name="email"
+                placeholder="Email"
+                required=""
+              />
+              <input id="yourMsg" type="text" />
+              <button>Submit</button>
+            </form>
+          </div>
+          <div class="overlayContainer">
+            <div class="overlay">
+              <div class="overlayLeft">
+                <h1>Stay in the Game</h1>
+                <p>
+                  Have questions or need support? Reach out, and let’s keep
+                  moving forward together
+                </p>
+                <button id="contactUsButton">Contact Us</button>
+              </div>
+              <div class="overlayRight">
+                <h1>Find Your Path</h1>
+                <p>
+                  Locate us on the map or follow us online—your journey with us
+                  starts here.
+                </p>
+                <button id="findUsButton">Find Us</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <script
+      src="https://kit.fontawesome.com/3f3af117f4.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
