--- a/contact.html
+++ b/contact.html
@@ -58,28 +58,22 @@
           <div class="contactForm">
             <form action="#">
               <h1>Get in Touch</h1>
-              <input
-                id="firstName"
-                type="text"
-                name="fName"
-                placeholder="First Name"
-                required=""
-              />
-              <input
-                id="lastName"
-                type="text"
-                name="lName"
-                placeholder="Last Name"
-                required=""
-              />
-              <input
-                id="email"
-                type="email"
-                name="email"
-                placeholder="Email"
-                required=""
-              />
-              <input id="yourMsg" type="text" />
+              <div class="inputContainer">
+                <input id="firstName" type="text" name="fName" required="" />
+                <label for="fName">First Name</label>
+              </div>
+              <div class="inputContainer">
+                <input id="lastName" type="text" name="lName" required="" />
+                <label for="lName">Last Name</label>
+              </div>
+              <div class="inputContainer">
+                <input id="email" type="email" name="email" required="" />
+                <label for="email">Email</label>
+              </div>
+              <div class="inputContainer">
+                <input id="yourMsg" type="text" name="yourMsg" required="" />
+                <label for="yourMsg">Your Message</label>
+              </div>
               <button>Submit</button>
             </form>
           </div>
