Fixing image compatibility issue

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
       <h2>Contact</h2>
       <div id="accountData">
         <div id="cartIcon">
-          <img src="Assets/OIP (3).jpg" alt="Cart Icon" />
+          <img src="OIP (3).jpg" alt="Cart Icon" />
         </div>
         <div id="accountImg">
-          <img src="Assets/OIP (2).jpg" alt="Account Icon" />
+          <img src="OIP (2).jpg" alt="Account Icon" />
         </div>
         <div id="hamburgerMenu">&#8801;</div>
       </div>
