Organizing the images in folder and adding sliding logo carousel

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
       <h2>Contact</h2>
       <div id="accountData">
         <div id="cartIcon">
-          <img src="OIP (3).jpg" alt="Cart Icon" />
+          <img src="Assets/OIP (3).jpg" alt="Cart Icon" />
         </div>
         <div id="accountImg">
-          <img src="OIP (2).jpg" alt="Account Icon" />
+          <img src="Assets/OIP (2).jpg" alt="Account Icon" />
         </div>
         <div id="hamburgerMenu">&#8801;</div>
       </div>
@@ -96,6 +96,35 @@
                 <button id="findUsButton">Find Us</button>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="logos">
+          <div class="logosSlide">
+            <img src="Assets/fila-svgrepo-com.svg" />
+            <img src="Assets/jordan-svgrepo-com.svg" />
+            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
+            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
+            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
+            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
+            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
+          </div>
+          <div class="logosSlide">
+            <img src="Assets/fila-svgrepo-com.svg" />
+            <img src="Assets/jordan-svgrepo-com.svg" />
+            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
+            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
+            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
+            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
+            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
+          </div>
+          <div class="logosSlide">
+            <img src="Assets/fila-svgrepo-com.svg" />
+            <img src="Assets/jordan-svgrepo-com.svg" />
+            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
+            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
+            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
+            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
+            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
           </div>
         </div>
       </div>
