--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h2>Home</h2>
         <div id="accountData">
           <div id="cartIcon">
-            <img src="OIP (3).jpg" alt="Cart Icon" />
+            <img src="Assets/OIP (3).jpg" alt="Cart Icon" />
           </div>
           <div id="accountImg">
-            <img src="OIP (2).jpg" alt="Account Icon" />
+            <img src="Assets/OIP (2).jpg" alt="Account Icon" />
           </div>
           <div id="hamburgerMenu">&#8801;</div>
         </div>
@@ -41,7 +41,7 @@
         <section>
           <div id="sneakersImg">
             <img
-              src="3549d095-3cc8-420f-a4e0-08208a404f95.webp"
+              src="Assets/3549d095-3cc8-420f-a4e0-08208a404f95.webp"
               width="100%"
             />
           </div>
@@ -61,12 +61,12 @@
         </section>
         <section>
           <div id="boxingGloves">
-            <img src="WhiteBoxingGloves.webp" width="100%"  alt="" />
+            <img src="Assets/WhiteBoxingGloves.webp" width="100%"  alt="" />
           </div>
           <p>Unleash Your Inner <strong>Fighter</strong></p>
           <div id="tennisPart">
              <p><strong> Master</strong> Your Game, One Swing at a Time!</p>
-          <div id="yogaMatImg"><img src="tennis.jpg" width="100%" /></div>
+          <div id="yogaMatImg"><img src="Assets//tennis.jpg" width="100%" /></div>
          </div>
         </section>
       </main>
