Contact us footer

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,17 @@
           <div class="ourData">
             <form action="#">
               <h1>Discover Our World</h1>
+              <div class="socialMediaContainer">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+              </div>
+              <div class="adressContainer">
+                <div class="container">
+                  <p id="locationAdress">Strada Avrig, no. 5 550027 Sibiu</p>
+                </div>
+              </div>
               <div>
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2782.6488742896145!2d24.137801599999996!3d45.7782267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474c678604b4ad13%3A0xe744074070b2b902!2sGSD%20Software%20%26%20Technology!5e0!3m2!1sro!2sro!4v1733765943655!5m2!1sro!2sro"
@@ -46,12 +57,7 @@
                   referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
               </div>
-              <div class="socialMediaContainer">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-              </div>
+
               <button>Submit</button>
             </form>
           </div>
@@ -100,35 +106,136 @@
         </div>
         <div class="logos">
           <div class="logosSlide">
-            <img src="Assets/fila-svgrepo-com.svg" />
-            <img src="Assets/jordan-svgrepo-com.svg" />
-            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
-            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
-            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
-            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
-            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
+            <a href="https://www.fila.com/" target="_blank"
+              ><img src="Assets/fila-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://www.nike.com/ro/w/jordan-shoes-37eefzy7ok"
+              target="_blank"
+              ><img src="Assets/jordan-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.nike.com/ro/" target="_blank"
+              ><img src="Assets/nike-4-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.adidas.ro/" target="_blank"
+              ><img src="Assets/adidas-9-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.www.reebok.eu/" target="_blank"
+              ><img src="Assets/reebok-5-logo-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://eu.puma.com/ro/en/home?msockid=0d1746fb9a2b641302b553aa9ba06556"
+              target="_blank"
+              ><img src="Assets/puma-logo-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.newbalance.com/" target="_blank"
+              ><img src="Assets/new-balance-2-logo-svgrepo-com.svg"
+            /></a>
           </div>
           <div class="logosSlide">
-            <img src="Assets/fila-svgrepo-com.svg" />
-            <img src="Assets/jordan-svgrepo-com.svg" />
-            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
-            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
-            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
-            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
-            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
+            <a href="https://www.fila.com/" target="_blank"
+              ><img src="Assets/fila-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://www.nike.com/ro/w/jordan-shoes-37eefzy7ok"
+              target="_blank"
+              ><img src="Assets/jordan-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.nike.com/ro/" target="_blank"
+              ><img src="Assets/nike-4-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.adidas.ro/" target="_blank"
+              ><img src="Assets/adidas-9-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.www.reebok.eu/" target="_blank"
+              ><img src="Assets/reebok-5-logo-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://eu.puma.com/ro/en/home?msockid=0d1746fb9a2b641302b553aa9ba06556"
+              target="_blank"
+              ><img src="Assets/puma-logo-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.newbalance.com/" target="_blank"
+              ><img src="Assets/new-balance-2-logo-svgrepo-com.svg"
+            /></a>
           </div>
           <div class="logosSlide">
-            <img src="Assets/fila-svgrepo-com.svg" />
-            <img src="Assets/jordan-svgrepo-com.svg" />
-            <img src="Assets/nike-4-logo-svgrepo-com.svg" />
-            <img src="Assets/adidas-9-logo-svgrepo-com.svg" />
-            <img src="Assets/reebok-5-logo-svgrepo-com.svg" />
-            <img src="Assets/puma-logo-logo-svgrepo-com.svg" />
-            <img src="Assets/new-balance-2-logo-svgrepo-com.svg" />
+            <a href="https://www.fila.com/" target="_blank"
+              ><img src="Assets/fila-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://www.nike.com/ro/w/jordan-shoes-37eefzy7ok"
+              target="_blank"
+              ><img src="Assets/jordan-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.nike.com/ro/" target="_blank"
+              ><img src="Assets/nike-4-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.adidas.ro/" target="_blank"
+              ><img src="Assets/adidas-9-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.www.reebok.eu/" target="_blank"
+              ><img src="Assets/reebok-5-logo-svgrepo-com.svg"
+            /></a>
+            <a
+              href="https://eu.puma.com/ro/en/home?msockid=0d1746fb9a2b641302b553aa9ba06556"
+              target="_blank"
+              ><img src="Assets/puma-logo-logo-svgrepo-com.svg"
+            /></a>
+            <a href="https://www.newbalance.com/" target="_blank"
+              ><img src="Assets/new-balance-2-logo-svgrepo-com.svg"
+            /></a>
           </div>
         </div>
       </div>
     </main>
+    <footer>
+      <hr width="90%" />
+      <div class="footerContainer">
+        <div class="footerSections">
+          <section class="resources">
+            <div class="sectionTitle">Resources</div>
+            <div class="sectionElements">
+              <div class="element"><a href="#">Find a store</a></div>
+              <div class="element"><a href="#">Become a member</a></div>
+              <div class="element"><a href="#">Feedback</a></div>
+              <div class="element"><a href="#">PromoCodes</a></div>
+            </div>
+          </section>
+          <section class="help">
+            <div class="sectionTitle">Help</div>
+            <div class="sectionElements">
+              <div class="element"><a href="#">Get Help</a></div>
+              <div class="element"><a href="#">Order Status</a></div>
+              <div class="element"><a href="#">Shipping and Delivery</a></div>
+              <div class="element"><a href="#">Returns</a></div>
+              <div class="element"><a href="#">Payment Options</a></div>
+              <div class="element"><a href="#">Reviews</a></div>
+            </div>
+          </section>
+          <section class="company">
+            <div class="sectionTitle">Company</div>
+            <div class="sectionElements">
+              <div class="element"><a href="#">About Us</a></div>
+              <div class="element"><a href="#">Careers</a></div>
+              <div class="element"><a href="#">Investors</a></div>
+              <div class="element"><a href="#">Sustenability</a></div>
+              <div class="element"><a href="#">Purpose</a></div>
+            </div>
+          </section>
+        </div>
+        <form class="newsletterForm">
+          <div class="newsletterFormTitle">Stay connected</div>
+          <div class="inputContainer">
+            <input id="email" type="email" name="email" required="" />
+            <label for="email">Email</label>
+          </div>
+          <button id="newsletterSubscribeBtn">
+            Subscribe to our Newsletter
+          </button>
+        </form>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/3f3af117f4.js"
       crossorigin="anonymous"
