--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,37 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
               </div>
-              <div class="adressContainer">
-                <div class="container">
+              <div class="detailsContainer">
+                <div class="emailContactContainer">
+                  <div class="detailsLogo">
+                    <i class="fa-regular fa-paper-plane"></i>
+                  </div>
+                  <p id="mailAdress">
+                    <a href="mailto:office@gsdgroup.net">office@gsdgroup.net</a>
+                  </p>
+               
+                </div>
+                <hr>
+                <div class="phoneContainer">
+                  <div class="detailsLogo">
+                    <i class="fa-solid fa-phone"></i>
+                  </div>
+                  <p id="phoneNumber">
+                    <a href="tel:+40 369 401 731">+40 369 401 731</a>
+                  </p>
+                  
+                </div>
+                <hr>
+                <div class="adressContainer">
+                  <div class="detailsLogo">
+                    <i class="fa-solid fa-house"></i>
+                  </div>
                   <p id="locationAdress">Strada Avrig, no. 5 550027 Sibiu</p>
                 </div>
               </div>
-              <div>
+              <div class="iframeContainer">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2782.6488742896145!2d24.137801599999996!3d45.7782267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474c678604b4ad13%3A0xe744074070b2b902!2sGSD%20Software%20%26%20Technology!5e0!3m2!1sro!2sro!4v1733765943655!5m2!1sro!2sro"
-                  width="300"
                   height="200"
                   style="border:0;"
                   allowfullscreen=""
@@ -57,8 +79,6 @@
                   referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
               </div>
-
-              <button>Submit</button>
             </form>
           </div>
           <div class="contactForm">
