--- a/contact.html
+++ b/contact.html
@@ -247,8 +247,8 @@
         <form class="newsletterForm">
           <div class="newsletterFormTitle">Stay connected</div>
           <div class="inputContainer">
-            <input id="email" type="email" name="email" required="" />
-            <label for="email">Email</label>
+            <input id="newsletterEmail" type="email" name="newsletterEmail" required="" />
+            <label for="newsletterEmail">Email</label>
           </div>
           <button id="newsletterSubscribeBtn">
             Subscribe to our Newsletter
