--- a/aboutUs.html
+++ b/aboutUs.html
@@ -36,8 +36,8 @@
 
       <nav>
         <ul>
-          <li id="aboutUsLink"><a href="index.html">Home</a></li>
-          <li id="contactLink"><a href="#">About Us</a></li>
+            <li id="homePageLink"><a href="index.html">Home</a></li>
+            <li id="contactPageLink"><a href="contact.html">Contact</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Shop</a></li>
         </ul>
