--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
 
     <nav>
       <ul>
-        <li id="aboutUsLink"><a href="index.html">Home</a></li>
-        <li id="contactLink"><a href="#">About Us</a></li>
+        <li id="homePageLink"><a href="index.html">Home</a></li>
+        <li id="aboutUsLink"><a href="aboutUs.html">About Us</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Shop</a></li>
       </ul>
