Adding footer to about Us page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -92,6 +92,58 @@
           </div>
         </div>
       </main>
+      <footer>
+        <hr width="90%" />
+        <div class="footerContainer">
+          <div class="footerSections">
+            <section class="resources">
+              <div class="sectionTitle">Resources</div>
+              <div class="sectionElements">
+                <div class="element"><a href="#">Find a store</a></div>
+                <div class="element"><a href="#">Become a member</a></div>
+                <div class="element"><a href="#">Feedback</a></div>
+                <div class="element"><a href="#">PromoCodes</a></div>
+              </div>
+            </section>
+            <section class="help">
+              <div class="sectionTitle">Help</div>
+              <div class="sectionElements">
+                <div class="element"><a href="#">Get Help</a></div>
+                <div class="element"><a href="#">Order Status</a></div>
+                <div class="element"><a href="#">Shipping and Delivery</a></div>
+                <div class="element"><a href="#">Returns</a></div>
+                <div class="element"><a href="#">Payment Options</a></div>
+                <div class="element"><a href="#">Reviews</a></div>
+              </div>
+            </section>
+            <section class="company">
+              <div class="sectionTitle">Company</div>
+              <div class="sectionElements">
+                <div class="element"><a href="#">About Us</a></div>
+                <div class="element"><a href="#">Careers</a></div>
+                <div class="element"><a href="#">Investors</a></div>
+                <div class="element"><a href="#">Sustenability</a></div>
+                <div class="element"><a href="#">Purpose</a></div>
+              </div>
+            </section>
+          </div>
+          <form class="newsletterForm">
+            <div class="newsletterFormTitle">Stay connected</div>
+            <div class="inputContainer">
+              <input
+                id="newsletterEmail"
+                type="email"
+                name="newsletterEmail"
+                required=""
+              />
+              <label for="newsletterEmail">Email</label>
+            </div>
+            <button id="newsletterSubscribeBtn">
+              Subscribe to our Newsletter
+            </button>
+          </form>
+        </div>
+      </footer>
       <script src="aboutUs.js"></script>
     </body>
   </html>
