--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <nav>
         <ul>
-          <li id="aboutUsLink"><a href="#">About Us</a></li>
+          <li id="aboutUsLink"><a href="aboutUs.html">About Us</a></li>
           <li id="contactLink"><a href="contact.html">Contact</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Shop</a></li>
