--- a/aboutUs.html
+++ b/aboutUs.html
@@ -36,8 +36,8 @@
 
       <nav>
         <ul>
-            <li id="homePageLink"><a href="index.html">Home</a></li>
-            <li id="contactPageLink"><a href="contact.html">Contact</a></li>
+          <li id="homeLink"><a href="index.html">Home</a></li>
+          <li id="aboutUsLinkPage"><a href="aboutUs.html">About Us</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Shop</a></li>
         </ul>
