--- a/aboutUs.html
+++ b/aboutUs.html
@@ -22,7 +22,7 @@
     </head>
     <body>
       <header>
-        <h2>Contact</h2>
+        <h2>About Us</h2>
         <div id="accountData">
           <div id="cartIcon">
             <img src="Assets/OIP (3).jpg" alt="Cart Icon" />
@@ -37,7 +37,7 @@
       <nav>
         <ul>
           <li id="homeLink"><a href="index.html">Home</a></li>
-          <li id="aboutUsLinkPage"><a href="aboutUs.html">About Us</a></li>
+          <li id="contactLinkPage"><a href="contact.html">Contact</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Shop</a></li>
         </ul>
@@ -49,7 +49,7 @@
           <span class="mainTitle animatedTitlePart"></span>
         </div>
         <div class="storiesContainer">
-          <div class="leftStory">
+          <div class="leftStory story hidden">
             <h3>The Spark That Launched ActiveEdge</h3>
             <p>
               Every great brand starts with a moment of inspiration. For us, it
@@ -68,7 +68,7 @@
               when performance meets purpose.
             </p>
           </div>
-          <div class="rightStory">
+          <div class="rightStory story hidden">
             <h3>Where Champions Find Their Edge</h3>
             <p>
               Behind every successful athlete is a community that believes in
