--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="contact.css" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hachi+Maru+Pop&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Protest+Revolution&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
+    rel="stylesheet"
+  />
     <title>ActiveEdge|Contact</title>
   </head>
   <body>
@@ -22,8 +26,8 @@
 
     <nav>
       <ul>
-        <li id="homePageLink"><a href="index.html">Home</a></li>
-        <li id="aboutUsLink"><a href="aboutUs.html">About Us</a></li>
+        <li id="aboutUsLink"><a href="index.html">Home</a></li>
+        <li id="contactLink"><a href="aboutUs.html">About Us</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Shop</a></li>
       </ul>
