--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <p>Unleash Your Inner <strong>Fighter</strong></p>
           <div id="tennisPart">
              <p><strong> Master</strong> Your Game, One Swing at a Time!</p>
-          <div id="yogaMatImg"><img src="Assets//tennis.jpg" width="100%" /></div>
+          <div id="yogaMatImg"><img src="Assets//tennis.jpg" width="100%"
+            height="100%"/></div>
          </div>
         </section>
       </main>
